--- a/styles/sass/_mq-tabletL.scss
+++ b/styles/sass/_mq-tabletL.scss
@@ -1,11 +1,11 @@
-@media all and (max-width:670px) {
+@media all and (min-width:421px) and (max-width:670px) {
     html {
         font-size: 90%;
     }
 
     .wrapper,
     .responsiveWrapper {
-        max-width: 600px;
+        max-width: 420px;
         margin: 0 auto;
     }
 
@@ -182,7 +182,7 @@
     }
 
     .wrapperInside {
-        width: 600px;
+        width: 420px;
         margin: 0 auto;
     }
 
