--- a/styles/sass/_mq-mobilePhone.scss
+++ b/styles/sass/_mq-mobilePhone.scss
@@ -1,12 +1,12 @@
 
-@media all and (max-width:375px) {
+@media all and(min-width:321px) and (max-width:375px) {
     html {
         font-size: 80%;
     }
 
     .wrapper,
     .responsiveWrapper {
-        max-width: 320px;
+        max-width: 310px;
         margin: 0 auto;
     }
 
