--- a/styles/sass/_mq-mobilePhoneM.scss
+++ b/styles/sass/_mq-mobilePhoneM.scss
@@ -1,4 +1,4 @@
-@media all and (max-width:420px) {
+@media all and (min-width:376px) and (max-width:420px) {
     html {
         font-size: 80%;
     }
