--- a/styles/sass/_mq-tablet.scss
+++ b/styles/sass/_mq-tablet.scss
@@ -174,7 +174,10 @@
         flex-flow: column nowrap;
     }
 
-
+    button {
+        padding: 2rem;
+    }
+    
     .blogSection {
         width: 100%;
         order: -1;
