--- a/styles/sass/_mq-landscape.scss
+++ b/styles/sass/_mq-landscape.scss
@@ -10,6 +10,7 @@
             }
         
             h1 {
+                padding-top: 3rem;
                 align-self: center;
                 color: $dandelion;
                 font-size: 3.5rem;
