--- a/styles/sass/_mq-screensM.scss
+++ b/styles/sass/_mq-screensM.scss
@@ -33,6 +33,7 @@
             padding-top: 10rem;
             color: $dandelion;
             font-size: 3.5rem;
+            text-align: center;
         }
     }
     
