additional styling changes

--- a/styles/sass/_mq-screensXL.scss
+++ b/styles/sass/_mq-screensXL.scss
@@ -5,8 +5,8 @@
         font-size: 90%;
     }
     
-    .wrapper,
-    .responsiveWrapper {
+    .wrapper
+    {
         max-width: 1000px;
         margin: 0 auto;
     }
