--- a/styles/styles.css
+++ b/styles/styles.css
@@ -862,6 +862,10 @@ img {
   margin-top: 6rem;
 }
 
+.extraDaysContent h3 {
+  color: #0d457f;
+}
+
 .ourPrograms p,
 .newLocations p,
 .extraDaysContent p,
@@ -892,6 +896,10 @@ img {
 .winTripContent {
   width: 60%;
   margin-top: 5rem;
+}
+
+.winTripContent h3 {
+  color: #0d457f;
 }
 
 .gallery {
@@ -930,7 +938,7 @@ img {
     width: 100%;
   }
   .home h1 {
-    padding-top: 10rem;
+    padding-top: 7rem;
     color: #fdd908;
     font-size: 3.5rem;
   }
@@ -1036,7 +1044,7 @@ img {
     width: 100%;
   }
   .home h1 {
-    padding-top: 10rem;
+    padding-top: 7rem;
     color: #fdd908;
     font-size: 3.5rem;
   }
@@ -1146,7 +1154,7 @@ img {
     width: 100%;
   }
   .home h1 {
-    padding-top: 10rem;
+    padding-top: 7rem;
     color: #fdd908;
     font-size: 3.5rem;
     text-align: center;
@@ -2988,7 +2996,6 @@ img {
 @media all and (min-width: 300px) and (max-width: 900px) and (orientation: landscape) {
   .home {
     background: url("../assets/home-header.jpg");
-    height: 100vh;
     background-size: cover;
   }
   .home nav,
@@ -3005,7 +3012,6 @@ img {
   }
   .blog {
     background: url("../assets/blog-header.jpg");
-    height: 100vh;
     background-size: cover;
   }
   .blog nav,
@@ -3018,7 +3024,6 @@ img {
   }
   .contact {
     background: url("../assets/contact-header.jpg");
-    height: 100vh;
     background-size: cover;
   }
   .contact nav,
