--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -726,7 +726,7 @@ img {
 
 .home {
   background: url("../assets/home-header.jpg");
-  min-height: 90vh;
+  height: 90vh;
   background-size: cover;
 }
 
@@ -3050,3 +3050,4 @@ img {
     display: none;
   }
 }
+/*# sourceMappingURL=styles.css.map */
